- Fix configs needing a restart to apply